FIX(ISSUE#1): added enhancements to the project expirence component

--- a/NickEWebsite/NickEWebsite.csproj
+++ b/NickEWebsite/NickEWebsite.csproj
@@ -36,7 +36,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="ClientApp\src\assets\Home_ex.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="ClientApp\src\app\about\" />
+    <Folder Include="ClientApp\src\app\images\" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
