--- a/NickEWebsite/NickEWebsite.csproj
+++ b/NickEWebsite/NickEWebsite.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Folder Include="ClientApp\src\app\about\" />
     <Folder Include="ClientApp\src\app\images\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
